final proj fixed dark mode

--- a/Pythonweather/weather_website/static/styles.css
+++ b/Pythonweather/weather_website/static/styles.css
@@ -68,7 +68,7 @@ input[type="text"] {
 
 button[type="submit"] {
     padding: 10px 20px;
-    background-color: #388E3C; /* Green color button */
+    background-color: rgb(201, 8, 8);
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -77,7 +77,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #2C6B2F; /* Darker green on hover */
+    background-color: rgb(65, 13, 12);
 }
 
 /* Weather Box Container */
@@ -186,6 +186,7 @@ body.light-mode body {
 }
 
 
+
 /* Weather Box Container */
 body.light-mode .weather-container {
     display: flex;
@@ -244,18 +245,12 @@ body.light-mode input[type="text"] {
     border-radius: 4px;
 }
 
-body.light-mode button[type="submit"] {
-    padding: 10px 20px;
-    background-color: yellowgreen;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
 
+body.light-mode button[type="submit"] {
+    background-color: rgb(201, 8, 8);
+}
 body.light-mode button[type="submit"]:hover {
-    background-color: green;
+    background-color: rgb(65, 13, 13);
 }
 
 /* Music Player */
@@ -341,3 +336,4 @@ body.light-mode h1 {
 #theme-toggle i.fa-moon {
     color: white;  /* Moon icon color is always white */
 }
+
